argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-external
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - argocd.shion1305.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
